--- a/index.css
+++ b/index.css
@@ -3,30 +3,36 @@
     margin: 0;
     box-sizing: border-box;
     list-style: none;
-    
+
 }
+
 html {
     font-size: 10px;
-    font-family:'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
+
 a {
     text-decoration: none;
     color: #e07a00;
 }
+
 /*Start of header styling*/
 header {
     width: 100%;
     height: 300vh;
-    background: linear-gradient(to bottom , rgba(0,0,0,.8), rgba(0,0,0,.5)),url(./assets/5bcb9bf96d1b6777b6fa13066282fb0e.gif);
+    background: linear-gradient(to bottom, rgba(0, 0, 0, .8), rgba(0, 0, 0, .5)), url(./assets/5bcb9bf96d1b6777b6fa13066282fb0e.gif);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+
 }
+
 .container {
     max-width: 120rem;
     width: 90%;
     margin: 0 auto;
 }
+
 /*navbar styling*/
 nav {
     padding-top: 5rem;
@@ -36,23 +42,29 @@ nav {
     text-transform: uppercase;
     font-size: 1.6rem;
 }
+
 .brand {
     font-size: 3rem;
     font-weight: 700;
 
 }
+
 a:hover {
     text-decoration: none;
     color: #f5c385;
 
 }
+
 .brand span {
-    color:#f0f0f0;
+    color: #f0f0f0;
+
 
 }
+
 nav ul {
     display: flex;
 }
+
 nav ul li {
     list-style: none;
     text-decoration: none;
@@ -63,13 +75,15 @@ nav ul li a {
     margin: 0 3rem;
     position: relative;
     letter-spacing: 2px;
-    
+
 }
-nav ul li a :last-child{
+
+nav ul li a :last-child {
     margin: 0;
 }
+
 nav ul li a::before,
-nav ul li a::after{
+nav ul li a::after {
     content: "";
     position: absolute;
     width: 100%;
@@ -79,40 +93,47 @@ nav ul li a::after{
     transform: scaleX(0);
     transition: all .5s;
 }
+
 nav ul li a::before {
     top: 0;
     transform-origin: left;
 }
+
 nav ul li a::after {
     bottom: 0;
     transform-origin: right;
 }
+
 nav ul li a:hover::before,
 nav ul li a:hover::after {
-transform: scaleX(1);
-cursor: pointer;
+    transform: scaleX(1);
+    cursor: pointer;
 }
+
 /*home section styling*/
-.home{
+.home {
     position: absolute;
     text-align: center;
-    margin-top: 30rem;
+    margin-top: 40rem;
     right: 2rem;
 }
+
 .home h1 {
-    font-size: 40px;
+    font-size: 30px;
     color: #e07a00;
     font-family: 'Roboto', sans-serif;
 }
+
 .home h2 {
     font-size: 24px;
     color: #f0f0f0;
     font-family: 'Roboto', sans-serif;
 }
+
 .home p {
-   font-size: 24px; 
-   color: #f0f0f0;
-   font-family:'Roboto', sans-serif; 
+    font-size: 24px;
+    color: #f0f0f0;
+    font-family: 'Roboto', sans-serif;
 }
 
 .btn-outline {
@@ -121,7 +142,8 @@ cursor: pointer;
     border: solid 1px #f79d30;
     font-size: 16px;
     font-weight: 500;
-    font-family:'Roboto', sans-serif; ;
+    font-family: 'Roboto', sans-serif;
+    
     line-height: 1;
     padding: 16px 30px;
     border-radius: 30px;
@@ -131,15 +153,60 @@ cursor: pointer;
     transition: all 0.3s linear;
 
 }
+
 .btn-outline:hover,
 .btn-outline:focus {
-background-color: #e07a00;
-color: #f0f0f0;
+    background-color: #e07a00;
+    color: #f0f0f0;
 
 }
-.btn-outline:active{
+
+.btn-outline:active {
     background-color: #f0f0f0;
     background-color: #e07a00;
+}
+
+.slider-area {
+    background-color:transparent;
+    padding: 50px 0;
+    position: relative;
+    margin: 120px 0;
+    margin-top: 120rem;
+    margin-right: 30%;
+    margin-left: 40%;
+    left: 35rem;
+    overflow: hidden;
+    
+}
+.slider-area h5,
+.slider-area h4,
+.slider-area p{
+color: #fff;
+
+}
+.carousel-slide.left,
+.carousel-slide.right {
+background: transparent;
+}
+
+.d-block-w-100{
+  width: 100px;
+  height: 100px; 
+  margin: auto; 
+  border: 2px #fff;
+  border-radius: 50%;
+  overflow: hidden;
+  
+}
+.carousel-inner img {
+    width: 300px;
+}
+
+.carousel-caption {
+    position: static;
+    padding-bottom: 15px;
+    padding-top: 0;
+
 }
 
 /*End of header section*/
