--- a/index.css
+++ b/index.css
@@ -210,3 +210,30 @@ background: transparent;
 }
 
 /*End of header section*/
+/*Styling about section*/
+#about {
+    background-color: #e07a00;
+    text-align: center;
+    font-size: 14px;
+    margin: auto;
+}
+
+.about {
+    display: flex;
+    margin-top: 20px;
+    justify-content: space-between;
+    font-family: 'Roboto', sans-serif;
+    line-height: 200%;
+}
+#about h2 {
+    font-size: 4rem;
+    font-weight: 700;
+    text-decoration: underline;
+
+
+}
+.text {
+    color: #f0f0f0;
+    font-weight: 700;
+    margin-top: 2rem;
+}
