--- a/style.css
+++ b/style.css
@@ -171,3 +171,11 @@ form {
     margin-right: 2rem;
     
 }
+.copyright {
+    margin-top: 1rem;
+    font-size: 18px;
+    background-color: black;
+    height: auto;
+    text-align: center;
+    color: #f0f0f0;
+}
